@@ -30,6 +30,10 @@
 
 #include <csignal>
 
+#ifdef __linux__
+#include <sys/prctl.h>
+#endif
+
 static constexpr Domain signal_handlers_domain("signal_handlers");
 
 static void
@@ -60,7 +64,7 @@ handle_reload_event(void *ctx) noexcept
 #endif
 
 void
-SignalHandlersInit(Instance &instance)
+SignalHandlersInit(Instance &instance, bool daemon)
 {
 	auto &loop = instance.event_loop;
 
@@ -79,6 +83,14 @@ SignalHandlersInit(Instance &instance)
 
 	SignalMonitorRegister(SIGHUP, {&instance, handle_reload_event});
 #endif
+
+	if (!daemon) {
+#ifdef __linux__
+		/* if MPD was not daemonized, shut it down when the
+		   parent process dies */
+		prctl(PR_SET_PDEATHSIG, SIGTERM);
+#endif
+	}
 }
 
 void
