@@ -29,6 +29,8 @@ ver 0.24 (not yet released)
 * switch to C++20
   - GCC 10 or clang 11 (or newer) recommended
 * static partition configuration
+* Linux
+  - shut down if parent process dies in --no-daemon mode
 * Windows
   - build with libsamplerate
   - remove JACK DLL support
